--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,14 +1,19 @@
 {
   "extends": [
-    ":enableRenovate",
     ":dependencyDashboard",
+    ":enablePreCommit",
+    ":enableRenovate",
     ":semanticCommits",
     ":separatePatchReleases",
     "docker:enableMajor"
   ],
-  "suppressNotifications": ["prIgnoreNotification"],
+  "suppressNotifications": [
+    "prIgnoreNotification"
+  ],
   "kubernetes": {
-    "fileMatch": ["\\.yaml$"],
+    "fileMatch": [
+      "\\.yaml$"
+    ],
     "ignorePaths": [
       ".github"
     ]
@@ -16,64 +21,125 @@
   "packageRules": [
     // Setup datasources
     {
-      "datasources": ["helm"],
+      "datasources": [
+        "helm"
+      ],
       "commitMessageTopic": "Helm chart {{depName}}",
       "semanticCommitScope": "charts",
       "separateMinorPatch": true,
       "ignoreDeprecated": true
     },
     {
-      "datasources": ["docker"],
+      "datasources": [
+        "docker"
+      ],
       "commitMessageTopic": "Docker image {{depName}}",
       "commitMessageExtra": "to {{#if isSingleVersion}}{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}",
-      "updateTypes": ["major", "minor", "patch"],
+      "updateTypes": [
+        "major",
+        "minor",
+        "patch"
+      ],
       "enabled": true
     },
     {
-      "matchDatasources": ["docker"],
+      "matchDatasources": [
+        "docker"
+      ],
       "semanticCommitScope": "images",
       "separateMinorPatch": true
     },
     // Add labels according to package and update types
     {
-      "datasources": ["docker"],
-      "updateTypes": ["major"],
-      "labels": ["renovate/image", "dep/major"]
+      "datasources": [
+        "docker"
+      ],
+      "updateTypes": [
+        "major"
+      ],
+      "labels": [
+        "renovate/image",
+        "dep/major"
+      ]
     },
     {
-      "datasources": ["docker"],
-      "updateTypes": ["minor"],
-      "labels": ["renovate/image", "dep/minor"]
+      "datasources": [
+        "docker"
+      ],
+      "updateTypes": [
+        "minor"
+      ],
+      "labels": [
+        "renovate/image",
+        "dep/minor"
+      ]
     },
     {
-      "datasources": ["docker"],
-      "updateTypes": ["patch"],
-      "labels": ["renovate/image", "dep/patch"]
+      "datasources": [
+        "docker"
+      ],
+      "updateTypes": [
+        "patch"
+      ],
+      "labels": [
+        "renovate/image",
+        "dep/patch"
+      ]
     },
     {
-      "datasources": ["helm"],
-      "updateTypes": ["major"],
-      "labels": ["renovate/helm", "dep/major"]
+      "datasources": [
+        "helm"
+      ],
+      "updateTypes": [
+        "major"
+      ],
+      "labels": [
+        "renovate/helm",
+        "dep/major"
+      ]
     },
     {
-      "datasources": ["helm"],
-      "updateTypes": ["minor"],
-      "labels": ["renovate/helm", "dep/minor"]
+      "datasources": [
+        "helm"
+      ],
+      "updateTypes": [
+        "minor"
+      ],
+      "labels": [
+        "renovate/helm",
+        "dep/minor"
+      ]
     },
     {
-      "datasources": ["helm"],
-      "updateTypes": ["patch"],
-      "labels": ["renovate/helm", "dep/patch"]
+      "datasources": [
+        "helm"
+      ],
+      "updateTypes": [
+        "patch"
+      ],
+      "labels": [
+        "renovate/helm",
+        "dep/patch"
+      ]
     },
     // Custom versions
     {
-      "matchDatasources": ["docker"],
+      "matchDatasources": [
+        "docker"
+      ],
       "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$",
-      "matchPackageNames": ["blakeblackshear/frigate"]
+      "matchPackageNames": [
+        "blakeblackshear/frigate"
+      ]
     },
     {
-      "matchDatasources": ["github-tags", "docker"],
-      "matchPackagePatterns": ["rancher/system-upgrade-controller"],
+      "matchDatasources": [
+        "github-tags",
+        "docker"
+      ],
+      "matchPackagePatterns": [
+        "rancher/system-upgrade-controller"
+      ],
       "groupName": "system-upgrade-controller-suite",
       "additionalBranchPrefix": "",
       "separateMinorPatch": true
