--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,8 @@ repos:
       - id: yamllint
         name: Yamllint
 
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.5
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: v0.1.17
     hooks:
       - id: shellcheck
         name: Shellcheck
