--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,21 +1,45 @@
 site_author: Vladimir Babichev
-site_description: GitOps repository for my home infrastructure
-site_name: Home GitOps
+site_description: Automation for home infrastructure
+site_name: Home Automation
 site_url: https://vladimir-babichev.github.io/gitops-argocd/
 
 repo_name: gitops-argocd
 repo_url: https://github.com/vladimir-babichev/gitops-argocd
-
+edit_uri: "edit/main/docs/"
 docs_dir: docs
 
 theme:
+  icon:
+    repo: fontawesome/brands/github
+  locale: en
   name: material
+  features:
+    - navigation.instant
+    - navigation.sections
+    - navigation.top
+    - search.highlight
+    - search.share
+    - search.suggest
+  palette:
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/lightbulb-outline
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/lightbulb
+        name: Switch to light mode
 markdown_extensions:
-  - pymdownx.highlight
-  - pymdownx.superfences
   - admonition
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
   - pymdownx.snippets:
       base_path: docs
+  - pymdownx.tasklist:
+      custom_checkbox: true
 plugins:
   - search:
       lang: en
