--- a/k8s/gitops/argocd/values.yaml
+++ b/k8s/gitops/argocd/values.yaml
@@ -24,28 +24,28 @@
 ###
 # Configuration
 ###
-externalSecret:
-  argocd-manor-gitrepo:
-    refreshInterval: "10m"
-    secretStoreRef:
-      name: vault
-      kind: ClusterSecretStore
-    target:
-      name: argocd-manor-gitrepo
-      template:
-        metadata:
-          labels:
-            argocd.argoproj.io/secret-type: repo-creds
-        data:
-          type: git
-          url: git@gitlab-gitlab-shell.gitlab.svc:manor
-          sshPrivateKey: |
-            {{ .sshPrivateKey | toString }}
-    data:
-      - secretKey: sshPrivateKey
-        remoteRef:
-          key: k8s/argocd/sshKey
-          property: sshPrivateKey
+# externalSecret:
+#   argocd-manor-gitrepo:
+#     refreshInterval: "10m"
+#     secretStoreRef:
+#       name: vault
+#       kind: ClusterSecretStore
+#     target:
+#       name: argocd-manor-gitrepo
+#       template:
+#         metadata:
+#           labels:
+#             argocd.argoproj.io/secret-type: repo-creds
+#         data:
+#           type: git
+#           url: git@gitlab-gitlab-shell.gitlab.svc:manor
+#           sshPrivateKey: |
+#             {{ .sshPrivateKey | toString }}
+#     data:
+#       - secretKey: sshPrivateKey
+#         remoteRef:
+#           key: k8s/argocd/sshKey
+#           property: sshPrivateKey
 
 argo-cd:
   global:
