Added app paths

--- a/k8s/core/apps/values.yaml
+++ b/k8s/core/apps/values.yaml
@@ -16,4 +16,6 @@ global:
 
 applications:
   nfs-subdir-external-provisioner:
+    path: k8s/core/nfs-subdir-external-provisioner
   vault:
+    path: k8s/core/vault
