--- a/k8s/core/apps/values.yaml
+++ b/k8s/core/apps/values.yaml
@@ -1,23 +1,13 @@
-nameOverride: core-apps
 global:
-  gitops:
-    namespace: default
   namespace: core
   project: default
   repo:
     url: https://github.com/vladimir-babichev/gitops-argocd/
     revision: HEAD
-    pathPrefix: k8s/core
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-      - ApplyOutOfSyncOnly=true
 
-applications:
-  nfs-subdir-external-provisioner:
-    # path: k8s/core/nfs-subdir-external-provisioner
-  vault:
-    # path: k8s/core/vault
+argocd-apps:
+  applications:
+    nfs-subdir-external-provisioner:
+      path: k8s/core/nfs-subdir-external-provisioner
+    vault:
+      path: k8s/core/vault
