--- a/k8s/gitops/argocd/values.yaml
+++ b/k8s/gitops/argocd/values.yaml
@@ -68,6 +68,15 @@ argo-cd:
           type: helm
           url: https://charts.helm.sh/stable
       url: *x-url
+      configManagementPlugins: |-
+        - name: argocd-vault-plugin-helm
+          init:
+            command: [sh, -c]
+            args: ["helm dependency build"]
+          generate:
+            command: ["sh", "-c"]
+            args: ["helm template $ARGOCD_APP_NAME ${helm_args} . | argocd-vault-plugin generate -"]
+
     ingress:
       annotations:
         traefik.ingress.kubernetes.io/router.tls: "true"
@@ -95,3 +104,26 @@ argo-cd:
   repoServer:
     <<: *x-affinity
     <<: *x-metrics
+    envFrom:
+      - secretRef:
+        name: argocd-vault-plugin-credentials
+    volumes:
+      - name: custom-tools
+        emptyDir: {}
+    volumeMounts:
+      - name: custom-tools
+        mountPath: /usr/local/bin/argocd-vault-plugin
+        subPath: argocd-vault-plugin
+    initContainers:
+      - name: download-tools
+        image: alpine:3.8
+        command: [sh, -c]
+        args:
+          - >-
+            wget -O argocd-vault-plugin
+            https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v1.6.0/argocd-vault-plugin_1.6.0_linux_amd64 &&
+            chmod +x argocd-vault-plugin &&
+            mv argocd-vault-plugin /custom-tools/
+        volumeMounts:
+          - mountPath: /custom-tools
+            name: custom-tools
