[argocd] Enabled SA for reposerver

--- a/k8s/gitops/argocd/values.yaml
+++ b/k8s/gitops/argocd/values.yaml
@@ -104,6 +104,8 @@ argo-cd:
   repoServer:
     <<: *x-affinity
     <<: *x-metrics
+    serviceAccount:
+      create: true
     envFrom:
       - secretRef:
           name: argocd-vault-plugin-credentials
