--- a/k8s/gitops/argocd/values.yaml
+++ b/k8s/gitops/argocd/values.yaml
@@ -13,8 +13,8 @@
                 values:
                   - amd64
 
-.domain: &x-domain "argocd.<path:secret/data/k8s/cluster#domain>"
-.url: &x-url "https://argocd.<path:secret/data/k8s/cluster#domain>"
+.domain: &x-domain "argocd.<path:secrets/data/k8s/cluster#domain>"
+.url: &x-url "https://argocd.<path:secrets/data/k8s/cluster#domain>"
 .metrics: &x-metrics
   metrics:
     enabled: false
