[ingress][traefik] Added traefik

--- a/k8s/gitops/apps/values.yaml
+++ b/k8s/gitops/apps/values.yaml
@@ -18,6 +18,8 @@ argocd-apps:
       path: k8s/gitops/apps
     core-apps:
       path: k8s/core/apps
+    ingress-apps:
+      path: k8s/ingress/apps
 
   appProjects:
     core:
