--- a/scripts/bootstrap/.env.sample
+++ b/scripts/bootstrap/.env.sample
@@ -1,3 +1,7 @@
 VAULT_ROOT_TOKEN=""
 VAULT_UNSEAL_TOKEN=""
 K8S_CLUSTER_DOMAIN="secret-domain.com"
+
+TRAEFIK_FORWARD_AUTH_CLIENTID="test"
+TRAEFIK_FORWARD_AUTH_CLIENTSECRET="test"
+TRAEFIK_FORWARD_AUTH_WHITELISTEMAILS="test"
