--- a/k8s/core/apps/values.yaml
+++ b/k8s/core/apps/values.yaml
@@ -14,6 +14,8 @@ argocd-apps:
         name: argocd-vault-plugin-helm
     vault:
       path: k8s/core/vault
+      plugin:
+        name: argocd-vault-plugin-helm
     cert-manager:
       path: k8s/core/cert-manager
       plugin:
