--- a/k8s/core/mysql/Chart.yaml
+++ b/k8s/core/mysql/Chart.yaml
@@ -5,3 +5,6 @@ dependencies:
   - name: mysql
     version: "8.8.21"
     repository: https://charts.bitnami.com/bitnami
+  - name: common
+    version: 0.1.0
+    repository: https://vladimir-babichev.github.io/helm-charts/
