--- a/k8s/core/vault/Chart.yaml
+++ b/k8s/core/vault/Chart.yaml
@@ -6,3 +6,6 @@ dependencies:
   - name: vault
     version: "0.18.*"
     repository: https://helm.releases.hashicorp.com
+  - name: common
+    version: 0.1.0
+    repository: file://../../../../helm-charts/charts/common
