[babybuddy] added babybuddy

--- a/k8s/services/apps/values.yaml
+++ b/k8s/services/apps/values.yaml
@@ -10,6 +10,8 @@ global:
 
 argocd-apps:
   applications:
+    babybuddy:
+      path: k8s/services/babybuddy
     pihole:
       path: k8s/services/pihole
     unifi:
