--- a/k8s/core/vault/Chart.yaml
+++ b/k8s/core/vault/Chart.yaml
@@ -8,4 +8,4 @@ dependencies:
     repository: https://helm.releases.hashicorp.com
   - name: commonlib
     version: 0.1.0
-    repository: file://../../../../helm-charts/charts/commonlib
+    repository: https://vladimir-babichev.github.io/helm-charts/
