[nextcloud] added nextcloud

--- a/k8s/services/apps/values.yaml
+++ b/k8s/services/apps/values.yaml
@@ -12,6 +12,8 @@ argocd-apps:
   applications:
     babybuddy:
       path: k8s/services/babybuddy
+    nextcloud:
+      path: k8s/services/nextcloud
     pihole:
       path: k8s/services/pihole
     unifi:
